<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeeDetailHistoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/tv_item_employee_image"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_marginEnd="16dp"
                tools:src="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tv_item_employee_image"
                android:layout_toRightOf="@id/tv_item_employee_image"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_item_employee_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:maxLines="2"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:text="@string/employee_name" />

                <TextView
                    android:id="@+id/tv_item_employee_eligibility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:ellipsize="end"
                    android:gravity="end"
                    tools:text="@string/employee_eligibility" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_item_employee_nearestpendingrequest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                tools:text="@string/employee_nearestrequestdate" />

            <TextView
                android:id="@+id/tv_item_employee_pendingrequestamount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                tools:text="@string/employee_pendingrequestamount" />

            <TextView
                android:id="@+id/tv_item_employee_approvedrequestamount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                tools:text="@string/employee_approvedrequestamount" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>