<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="100">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="60"
        tools:ignore="UselessParent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/tv_dev_image"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_gravity="center"
            android:src="@drawable/dev"
            app:civ_border_color="@color/darkRed"
            app:civ_border_width="5dp" />

        <TextView
            android:id="@+id/tv_dev_name_long"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/dev_name_long"
            android:textColor="@color/darkRed"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_dsp_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/dsp_contact"
            android:textColor="@color/darkRed"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/tv_dev_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/dev_email"
            android:textColor="@color/darkRed"
            android:textSize="19sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="60"
        android:background="@drawable/semi_circle_yellow"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="6"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/iv_ic_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:maxWidth="63dp"
                android:maxHeight="63dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_mail"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/iv_ic_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:maxWidth="63dp"
                android:maxHeight="63dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_facebook"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="6"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/iv_ic_github"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:adjustViewBounds="true"
                android:maxWidth="63dp"
                android:maxHeight="63dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_github"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/iv_ic_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:adjustViewBounds="true"
                android:maxWidth="63dp"
                android:maxHeight="63dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_map"
                tools:ignore="ContentDescription" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>